# ChangeLog for net-misc/rabbitmq-server
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/rabbitmq-server/ChangeLog,v 1.37 2014/03/10 12:03:00 ultrabug Exp $

*rabbitmq-server-3.2.4 (10 Mar 2014)

  10 Mar 2014; Ultrabug <ultrabug@gentoo.org> +rabbitmq-server-3.2.4.ebuild:
  version bump

*rabbitmq-server-3.2.3 (18 Feb 2014)

  18 Feb 2014; Ultrabug <ultrabug@gentoo.org> -rabbitmq-server-3.1.3.ebuild,
  -rabbitmq-server-3.2.1.ebuild, +rabbitmq-server-3.2.3.ebuild:
  version bump, drop old

  08 Jan 2014; Mike Frysinger <vapier@gentoo.org> rabbitmq-server-3.1.3.ebuild,
  rabbitmq-server-3.1.4.ebuild, rabbitmq-server-3.2.1.ebuild,
  rabbitmq-server-3.2.2.ebuild:
  Inherit the user eclass for enewuser/etc...

*rabbitmq-server-3.2.2 (24 Dec 2013)

  24 Dec 2013; Ultrabug <ultrabug@gentoo.org> +rabbitmq-server-3.2.2.ebuild,
  files/rabbitmq-server.init-r3:
  Version bump, enhance init script wrt #495090 thx to Evgeniy

*rabbitmq-server-3.2.1 (08 Nov 2013)

  08 Nov 2013; Ultrabug <ultrabug@gentoo.org> +rabbitmq-server-3.2.1.ebuild:
  version bump

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> rabbitmq-server-3.1.3.ebuild,
  rabbitmq-server-3.1.4.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*rabbitmq-server-3.1.4 (13 Aug 2013)

  13 Aug 2013; Ultrabug <ultrabug@gentoo.org> -rabbitmq-server-3.0.4.ebuild,
  -rabbitmq-server-3.1.1.ebuild, +rabbitmq-server-3.1.4.ebuild:
  version bump, drop old

*rabbitmq-server-3.1.3 (04 Jul 2013)

  04 Jul 2013; Ultrabug <ultrabug@gentoo.org> -rabbitmq-server-2.8.7.ebuild,
  -rabbitmq-server-3.0.2.ebuild, +rabbitmq-server-3.1.3.ebuild:
  version bump, drop old

  22 May 2013; Ultrabug <ultrabug@gentoo.org> -rabbitmq-server-3.1.0.ebuild,
  rabbitmq-server-3.1.1.ebuild:
  fix #470944 thx to Heather for reporting

*rabbitmq-server-3.1.1 (21 May 2013)

  21 May 2013; Ultrabug <ultrabug@gentoo.org> +rabbitmq-server-3.1.1.ebuild:
  version bump
