@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install preinst setup
+DEPEND=dev-lang/erlang app-arch/zip app-arch/unzip app-text/docbook-xml-dtd:4.5 app-text/xmlto dev-libs/libxslt dev-python/simplejson virtual/pkgconfig
+DESCRIPTION=RabbitMQ is a high-performance AMQP-compliant message broker written in Erlang.
+EAPI=5
+HOMEPAGE=http://www.rabbitmq.com/
+IUSE=python_targets_python2_6 python_targets_python2_7 python_single_target_python2_6 python_single_target_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2 MPL-1.1
+RDEPEND=dev-lang/erlang
+SLOT=0
+SRC_URI=http://www.rabbitmq.com/releases/rabbitmq-server/v3.3.0/rabbitmq-server-3.3.0.tar.gz
+_eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	multilib	fac675dcccf94392371a6abee62d909f	python-single-r1	82a55861314bbcedaf1e08ed4dd651b3	python-utils-r1	30d5d7986d3f80d0f2c2726366426859	systemd	9f063b2cc19c5e8030911372aa246c4e	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=a6f117eb663cad87505f32e029b33a17
