@@ -8,16 +8,18 @@ DIST rabbitmq-server-3.1.4.tar.gz 3562602 SHA256 46184bfef01f5c5a40746f29d10f096
 DIST rabbitmq-server-3.2.2.tar.gz 3583974 SHA256 c6f985d2bf69de60fa543ebfff190f233d2ab8faee78a10cfb065b4e4d1406ba SHA512 bced51c448e6465218ea01745059002cdc6bd5db5e3cfdbf3a98cc190b189336b31545e265b5c48b6365d3f8e7f9f4e127a9325563794cbd6f4e937ed62df841 WHIRLPOOL ffd18dc2b58a58edb6008c014ee937ede549f651f5c28072f362ff43a618331ffd3c439e2d2fecbd1acde9dd8a1a3bc98f219e7efa1d24ceb9d434a93c1ee573
 DIST rabbitmq-server-3.2.3.tar.gz 3586619 SHA256 eb2c73338f4c477ea4ba496c4c5e18793b42f3abbd23010133b0163f85faf868 SHA512 e138393cdd510cd428544a4272d6ccf4e9e4e70132c34f21923041f5f426a5639654945c8eac485dfdb89d8e69dc87cee6fa9d4cbec786e2453595ce3d04abad WHIRLPOOL fa4ff801aa391bd115bfda8023dee48ac4a33684d4e1e461296dabb9f092ced10878023edd6a11a38f5ef79d00363f76c3015de316b46f8c45c8710fbb37aed0
 DIST rabbitmq-server-3.2.4.tar.gz 3588097 SHA256 a930f92b362df2f292ec5f0281aa2011eb0c668faf6e24c4653a9fc53ec43b9f SHA512 573fc9fa2956061f91dc093664d98b569157e4f6cfb0d772731d1de6b1f84dd713169b515e28ede3383ac3baabfb912679cd7f021786316d487afc8305cb3457 WHIRLPOOL abecf0a7aaf3ab6d39475ec7f032a4ddbb078f98bf68c5996816fe1bc4bb40fa2052396e782ea8d450b1268b0f1187c5638dcd71aa859b6578025a930a2cca73
+DIST rabbitmq-server-3.3.0.tar.gz 3468885 SHA256 2f0e2584becfd9826a79f44484db9bda853ffaefbdcc47cbc4065d88c2fd8623 SHA512 a507e66197c4fd92911dd213817ab73e591a0a85f9b92239eef4facf7bf35511793c0d7a341f74c3fc03a75f813f6846a91589ebcad0ef4a361a6faf7214dbb1 WHIRLPOOL d3ad23dec3547f5a37bc863831952f69b294071e06c88736aac10539f34b38fbaa81d7113e7213731b5c46fbae8ce381ecf8e667ae059471bfcefdbe9f08e818
 EBUILD rabbitmq-server-3.1.4.ebuild 2703 SHA256 7015cc1294050632e4aa8a5909e1384db3a2f197877baf7eb8aae6365c4bc3f1 SHA512 2890039113c6f3e979b8f295044ef979d8a55c311f81549b07b7f2bd2152cb4434aea1f7175a8992f1a05ea021a89f30c2c04306062d6ab8673d23e332e3668e WHIRLPOOL fc3c47e58f49dc53de3c609f022bc6b410ab15ef733c833ad01a2474d0b3ca5d62cda20a8020053aa986f60b50a5ff6a1962638edf3ff9df640d88ae86644f35
 EBUILD rabbitmq-server-3.2.2.ebuild 2703 SHA256 f56ab9bbbd691fec467b7d2b13879f425c3f795d177adcfc2e4a471c8a2576dc SHA512 dafe7064d31201f485405600577f5a04951c99aa1ea92799f43cd66441670c63ba4751684eaf5577e1390847a2de2201ab1cc5bd1691c18fc0f8f59ee5844c6a WHIRLPOOL e8ffcd144d84ae8c6e97951e1eac5f21a1ca736c2e1f40d80cc91b437a091b3a275a23f601f201815d5f3895bf998183e1bd56a5d110a69fd6687a95b1f15dbe
 EBUILD rabbitmq-server-3.2.3.ebuild 2705 SHA256 7d5986879b7d0dea3bc563d8f155dbaccb7b3ed2b01a63b1c8da48b5ee91c00b SHA512 ba7444ba6dc6b4c9f7f4b80fac5154bc5b28383e7fb6fe28f6f293ff7aefb79ae0eb2ac1d4da74588115e11721c49f7ae75f461b72d3415838f8342bd086b279 WHIRLPOOL ccdf181dc6ba0daab8507239e15f31fd29c1f665032b4632377c5838b3fda658036c9030a17fffd0646c3e48e46ccf357c75b6278c4cd9441b9df128206e7bb5
 EBUILD rabbitmq-server-3.2.4.ebuild 2705 SHA256 c40cedb747521daef6706e724521e95c554321023bd20eac84ddcfcc1a55dd8f SHA512 2f13d9cd5bab0af9700e2caef7483a81a03b75e14879f451f5c9bbbd657b3582f11567d41139c9a2d866591c085e96271193fa0667a56a623be4449bc326317e WHIRLPOOL f20dee804c036d567178865cb76a9ae287eb74e293e65e9c9bac0d37a54ee1dfb2d1a130dadfbc06a5a7bac23e93b03ffc7796f0fea8b24c056e0c8741c0b6f4
-MISC ChangeLog 3211 SHA256 1ccae73eb458f5b9103c4555c5cb775b97272ca39ba2e0d9877c863aad4e5866 SHA512 ff964ea4e26ed55f619be9068513489b3bf059da175eca2c7110f53df96e9613d645fd1220c7d0c0043f288e74d80c0e590624f8e1f91c1090b858a428aba6a6 WHIRLPOOL 16d0bcf35fd952dda944480e4087f6d006bb8ba179ece665b03fb2fd7d31fd8e3a469ce8b8d7ed4862efbfe91ec45bc6933a26a3214bec72a4f437a7294c0d36
+EBUILD rabbitmq-server-3.3.0.ebuild 2903 SHA256 e999b19b3d6f4e8f05560eda70f008abb1fcaea43b2eab603cf9cf38d161d8bf SHA512 ed4f806c3b2b870ab681bd9b6e0be975934013724ca489cc4fe795e29f1e3c6ccff5d273d5ccdcda9f90f9848ca7833a15d2133ddc4ce56c7aaa9293a9ab87cd WHIRLPOOL 15a8402464a1e15c34df6ac10bc515a29027bf77b1afb59e77b44c1760359691b8b694a35609bb02e082d5e8f840a39d77f729a25e1d776ea72ad78bdeae0707
+MISC ChangeLog 3357 SHA256 dc0bbf0dcb3f1b2a846ba5d90a7d7195d63e7752b6392db7b28e655848765774 SHA512 69d7c5148a65d2f755f1e1f2a09b945e1a85f91017c7c769744101dc6d813b322cad7a716c55e8ed713cc47faccf79a18f31599f0fcae3f00ddfc66b5906f8d1 WHIRLPOOL bb00fa795d0f45a6b15cfb6d8501c63e447c081339ba9c38faaacbd1e6bcb6748ae802608211d5e8a2489c8cd8d93d301a7f1c438d5434f93c1824d3fc33f5a3
 MISC metadata.xml 230 SHA256 bd8560ab21232bace10a233ea24414dacb36c87e37a3a10cdeeded266cbb5c8d SHA512 3c7c9badebcc814572f1be89f2cdffaa81f795e3a44ae4f67bc7332927d332844a8a076b0f34d0e84b31db5abef654001cf1e6efff9628fa56a06786c082e6c0 WHIRLPOOL 57f9c4a65d7791075c8859af3cbbff141cc74e426102fefd15029bf1c63d3cf8a2c496eb4fc4f59570d0b84151a0d7a0feba0599827e932702ecfd5b8598563d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlMdqfsACgkQKiQSS7ZY+hPZ3QEAvhL9OwPsnHfqUTqWrQgb3itv
-f7yNtTi6hbxFKP9tuRUBALHLNjCGdq62CUU3OWX9HOrPvttS01Y47ODBsmaAam0K
-=kRXR
+iF4EAREIAAYFAlNLnlQACgkQKiQSS7ZY+hOBngEA7Rkd3ml2sPmfsLR7vanHJE+7
+ChqXxjOprpSsXt+HJX0A/j5on6bH+oOTSTP86VwuijBHlbFPAPjJGd4N0HmKSjtJ
+=wCHE
 -----END PGP SIGNATURE-----
